# vorzax

./: Cargo.toml  FINAL_REPORT.md  GENERATION_SUMMARY.txt  PROJECT_STATUS.md  README.md  START_HERE.txt  VERIFICATION_CHECKLIST.md  build.rs
.github/: FUNDING.yml
boot/: entry.asm  linker.ld
src/: lib.rs  main.rs
src/boot/: entry.rs  mod.rs
src/driver/: framebuffer.rs  input.rs  keyboard.rs  mod.rs  mouse.rs  storage.rs  timer.rs  uart.rs
src/gui/: about.rs  app.rs  desktop.rs  event.rs  mod.rs  widget.rs  window.rs
src/kernel/: interrupt.rs  memory.rs  mod.rs  process.rs  scheduler.rs  user.rs
src/util/: mod.rs
